--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,8 @@
             <button onclick="location.href='/image_upscaler'" aria-label="Go to Image Upscaler">Image Upscaler</button>
             <button onclick="location.href='/file_converter'" aria-label="Go to File Converter">File Converter</button>
             <!-- <button onclick="location.href='/image_to_text'" aria-label="Go to Image to Text">Image to Text</button> -->
-            <button onclick="location.href='/speedtest'" aria-label="Go to Speed Test">Speed Test</button>
+            <button onclick="location.href='/speedtest'" aria-label="Go to Speed Tester">Speed Tester</button>
+            <button onclick="location.href='/unit_converter'" aria-label="Go to Unit Converter">Unit Converter</button>
         </div>
     </div>
 </body>
